# rtl_433

src/: git_version.h  rtl_433.c
win32-qtcreator/: CMakeLists.txt  README.txt  genGitVersion.sh
